fix spacing on doubles images and remove searchbar on other pages, as well as fix bottom margin

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,6 +1,6 @@
 body {
   margin-top: 70px;
-  padding-bottom: 70px;
+  padding-bottom: 70px !important;
 }
 
 h1 {
